# kuka_plc_ros

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md
.github/workflows/: main.yml
iiwa7_ikfast_iiwa_arm_plugin/: CMakeLists.txt  iiwa7_iiwa_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
iiwa7_ikfast_iiwa_arm_plugin/src/: iiwa7_iiwa_arm_ikfast_moveit_plugin.cpp  iiwa7_iiwa_arm_ikfast_solver.cpp
iiwa_moveit_config/: .setup_assistant  package.xml
iiwa_moveit_config/config/: controllers.yaml  controllers_hw.yaml  fake_controllers.yaml  iiwa7.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
iiwa_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  iiwa7_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
iwtros_description/: CMakeLists.txt  package.xml
iwtros_description/launch/: kuka_xacro.launch
iwtros_description/urdf/camera/: nimbus.xacro
iwtros_description/urdf/conveyor/: conveyor.urdf.xacro  dhbw.xacro
iwtros_description/urdf/kuka_robot/: iiwa7.urdf  iiwa7.urdf.xacro  iiwa7_nimbus.urdf.xacro  kuka_iiwa7.gazebo.xacro  kuka_iiwa7.urdf.xacro
iwtros_description/urdf/table/: add_table.urdf.xacro
iwtros_gazebo/: CMakeLists.txt
iwtros_gazebo/config/: iiwa_control.yaml
iwtros_gazebo/launch/: spawn_iiwa.launch
iwtros_goal/: CMakeLists.txt  package.xml  setup.py
iwtros_goal/include/iwtros_goal/: iiwa_manipulation.h  schunk_gripper.h
iwtros_goal/launch/: picknplace.launch  pnp.launch
iwtros_goal/script/iwtros_goal/: picknplace_demo.py  plc_control.py  plc_control_node.py
iwtros_goal/src/: main.cpp  manipulation.cpp  picknplace_main.cpp
iwtros_launch/config/: box_detection.rviz  iiwa.rviz
iwtros_launch/launch/: iwtros_env.launch  spawn_robots.launch
iwtros_launch/launch/robot_hw/: iiwa_description.launch  iiwa_hw.launch  iiwa_hw_controller.launch
iwtros_msgs/: CMakeLists.txt  package.xml
iwtros_msgs/msg/: kukaControl.msg  plcControl.msg
kuka_control/: CMakeLists.txt  package.xml
kuka_control/include/kuka_control/: iiwa_manipulation.h  schunk_gripper.h
kuka_control/launch/: control.launch
kuka_control/src/: main.cpp  manipulation.cpp
plc_snap/: pcl_test.py  plc_client_test.py
